# pgr

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  README.md  SPEC.md  justfile
.github/workflows/: ci.yml
demos/: diff-awareness.cast  record-diff.sh  record-syntax.sh  record-table.sh  syntax-highlight.cas  syntax-highlight.cast  syntax-highlight.tape  table-view.cast
fixtures/: ansi.txt  ansi_colors.txt  ansi_mixed.txt  basic.txt  blank_groups.txt  long_lines.txt  numbered_1000.txt  short.txt  tabs.txt
pgr-agent/: Cargo.toml
pgr-agent/src/: error.rs  lib.rs
pgr-cli/: Cargo.toml
pgr-cli/src/: env.rs  main.rs  options.rs
pgr-cli/tests/: visual.rs
pgr-cli/tests/conformance/: compare.rs  display.rs  file_misc.rs  harness.rs  helpers.rs  main.rs  navigation.rs  phase2_keys.rs  phase2_multifile.rs  phase2_navigation.rs  phase2_options.rs  phase2_prompt.rs  phase2_search.rs  search.rs
pgr-cli/tests/e2e/: basic_navigation.rs  display.rs  main.rs  startup.rs
pgr-core/: Cargo.toml
pgr-core/src/: blame.rs  buffer.rs  content_mode.rs  diff.rs  error.rs  file_buffer.rs  git_log.rs  (+6 more)
pgr-display/: Cargo.toml
pgr-display/src/: ansi.rs  blame_render.rs  charset.rs  color.rs  compiler_links.rs  diff_render.rs  error.rs  hyperlink.rs  lib.rs  line_numbers.rs  prompt.rs  render.rs  screen.rs  side_by_side.rs  squeeze.rs  syntax.rs  table_render.rs  termcap.rs  terminal_output.rs  unicode.rs  url.rs
pgr-input/: Cargo.toml
pgr-keys/: Cargo.toml
pgr-keys/src/: clipboard.rs  command.rs  completion.rs  dispatch.rs  error.rs  file_list.rs  filename.rs  git_gutter.rs  help.rs  history_file.rs  info.rs  key.rs  key_reader.rs  keymap.rs  lesskey.rs  lib.rs  line_editor.rs  runtime_options.rs  shell.rs  tags.rs  terminal.rs
pgr-search/: Cargo.toml
pgr-syntax/: Cargo.toml
(+17 files in other folders)
