[package]
name = "pgr-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
pgr-core = { path = "../pgr-core" }
pgr-input = { path = "../pgr-input" }
pgr-search = { path = "../pgr-search" }
pgr-display = { path = "../pgr-display" }
pgr-keys = { path = "../pgr-keys" }
pgr-syntax = { path = "../pgr-syntax" }
pgr-agent = { path = "../pgr-agent" }
