[package]
name = "pgr-keys"
version = "0.1.0"
edition = "2021"

[features]
default = ["pgr-display/syntax"]
syntax = ["pgr-display/syntax"]

[dependencies]
libc = "0.2"
pgr-core = { path = "../pgr-core" }
pgr-display = { path = "../pgr-display", default-features = false }
pgr-input = { path = "../pgr-input" }
pgr-search = { path = "../pgr-search" }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
